# SoftArch_2024

./: .dockerignore  .pylintrc  Dockerfile  README.md  client.py  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: lint-and-test.yml  pylint.yml
server/: config.py  main.py
server/messages/: routes.py  schemas.py
test/: test.py
tests/: test.py
