[tool.poetry]
name = "anon-chat"
version = "0.1.0"
description = "Anonymous Chat"
authors = ["anijackich <anijackich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
uvicorn = "^0.30.6"
pylint = "^3.2.7"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
